# DocuBotAI

./: config.py  main.py  pyproject.toml
.streamlit/: config.toml
utils/: chat_manager.py  document_processor.py
