[project]
name = "repl-nix-docubotai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.9.0.post1",
    "google-generativeai>=0.8.3",
    "langchain-community",
    "langchain-google-genai>=2.0.6",
    "langchain-openai>=0.2.12",
    "langchain>=0.3.10",
    "openai>=1.57.1",
    "pypdf2>=3.0.1",
    "streamlit>=1.40.2",
]
