[project]
name = "repl-nix-docubotai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.7.4",
    "google-generativeai>=0.3.1",
    "langchain-community>=0.0.10",
    "langchain-core>=0.0.10",
    "langchain-google>=0.1.1",
    "langchain-google-genai>=0.0.5",
    "langchain-openai>=0.2.12",
    "langchain>=0.0.350",
    "openai>=1.57.1",
    "pypdf2>=3.0.0",
    "streamlit>=1.28.0",
]
